# minipro-rs

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v027.md  RELEASE_NOTES_v050.md  ROADMAP.md  spec.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
.gitlab/issue_templates/: Bug.md  Hardware_Test.md
crates/minipro-cli/: Cargo.toml  build.rs
crates/minipro-cli/src/: cli.rs  main.rs
crates/minipro-cli/wix/: main.wixproj  main.wxs
crates/minipro-core/: Cargo.toml
crates/minipro-core/src/: algorithm.rs  batch.rs  database.rs  device.rs  diff.rs  error.rs  handle.rs  lib.rs  operations.rs  usb.rs
crates/minipro-core/src/format/: ihex.rs  jedec.rs  mod.rs  srec.rs
crates/minipro-core/src/protocol/: mod.rs  t48.rs  t56.rs  t76.rs  tl866a.rs  tl866iiplus.rs
docs/: T76-IMPROVEMENTS-PLAN.md  T76-SUPPORT-STATUS.md
gui/: .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
gui/src/: App.svelte  app.css
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
gui/src/lib/: file-dialog.ts
gui/src/lib/components/: ComboSearch.svelte  DeviceSelector.svelte  DiagnosticsPanel.svelte  HexViewer.svelte  ProgressPanel.svelte  SettingsPanel.svelte  TerminalLog.svelte
gui/src/lib/stores/: batch.ts  device.ts  hex.ts  logs.ts  operations.ts  settings.ts  theme.ts
tests/integration/: framework.rs  main.rs
wix/: License.rtf  main.wxs
