[workspace]
members = ["crates/minipro-core", "crates/minipro-cli"]
exclude = ["gui/src-tauri"]
resolver = "2"

[workspace.package]
version      = "0.2.7"
edition      = "2021"
license      = "GPL-3.0-or-later"
authors      = []
repository   = "https://gitlab.com/arcturus8081/minipro-rs"

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

