[package]
name    = "minipro"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "minipro"
path = "src/main.rs"

[dependencies]
minipro-core = { path = "../minipro-core" }
clap         = { version = "4", features = ["derive"] }
anyhow       = "1"
env_logger   = "0.11"
indicatif    = "0.17"
