[package]
name    = "minipro"
version.workspace = true
edition.workspace = true
license.workspace = true
build   = "build.rs"

[[bin]]
name = "minipro"
path = "src/main.rs"

[dependencies]
minipro-core  = { path = "../minipro-core" }
clap          = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen   = "0.2"
anyhow        = "1"
env_logger    = "0.11"
indicatif     = "0.17"

[build-dependencies]
clap          = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen   = "0.2"
